# my_cpp_plan

./: .gitignore  CMakeLists.txt  README.md  leetcode.h  main.cpp
backtrack/: 31_nextPermutation.cpp  39_combinationSum.cpp  40_combinationSum2.cpp  46_permute.cpp  47_permuteUnique.cpp  60_getPermutation.cpp  77_combine.cpp  78_subsets.cpp  90_subsetsWithDup.cpp  93_restoreIpAddresses.cpp
backtrack/combination/: 17_letterCombinations.CPP  216_combinationSum3.cpp  39_combinationSum.cpp  40_combinationSum2.cpp  77_combine.cpp
backtrack/game/: 39_solveSudoku.cpp  51_solveNQueens.cpp
backtrack/permute/: 46_permute.cpp  47_permuteUnique.cpp
backtrack/subsets/: 491_findSubsequences.cpp  78_subsets.cpp  90_subsetsWithDup.cpp
concurrent/lesson_four/: exp_1.cpp  exp_2.cpp  exp_3.cpp  msg_queue.cpp
concurrent/lesson_one/multiple_thread/: exp_1.cpp  exp_2.cpp
concurrent/lesson_one/single_thread/: exp_1.cpp  exp_2.cpp  exp_3.cpp  exp_4.cpp  exp_5.cpp  exp_6.cpp
cpp_primer/chap12/: 12_23.cpp  str_blob.cpp  str_blob.h  test_str_blob.cpp  test_text_query.cpp  text_query.cpp  text_query.h
cpp_primer/chap13/: 13_13_X.cpp  folders.cpp  folders.h  message.cpp  message.h  strvec.cpp  strvec.h  test_message.cpp
cpp_primer/chap15/: StrBlob.h  TextQuery.cpp  TextQuery.h  main.cpp
dp/: 10_isMach.cpp  1143_longestCommonSubsequence.cpp  121_maxProfit.cpp  174_calculateMinimumHP.cpp  300_lengthOfLIS.cpp  322_coinChange.cpp  354_maxEnvelopes.cpp  509_fib.cpp  516_longestPalindromeSubseq.cpp  53_maxSubArray.cpp  583_minDistance.cpp  64_minPathSum.cpp  712_minimumDeleteSum.cpp  72_minDistance.cpp
greedy/: 1024_videoStitching.cpp  435_eraseOverlapIntervals.cpp  452_findMinArrowShots.cpp  45_jump.cpp  55_canJump.cpp
learn_cmake/: README.md
learn_cmake/00_basic/B-hello-headers/: CMakeLists.txt
learn_cmake/00_basic/B-hello-headers/src/: Hello.cpp
learn_cmake/00_basic/F-build-type/: CMakeLists.txt  main.cpp
learn_cmake/01_basic/C-static-library/: CMakeLists.txt
learn_cmake/01_basic/C-static-library/src/: Hello.cpp  main.cpp
learn_cmake/01_basic/D-shared-library/: CMakeLists.txt
learn_cmake/01_hello_cmake/: answer.h  main.cpp
learn_cmake/02_split_library/: CMakeLists.txt  answer.cpp
learn_cmake/03_subdirectory/: CMakeLists.txt
leetcode/backtrack/: 17_letterCombinations.CPP  216_combinationSum3.cpp  31_nextPermutation.cpp  39_combinationSum.cpp  39_solveSudoku.cpp  40_combinationSum2.cpp  46_permute.cpp  47_permuteUnique.cpp  491_findSubsequences.cpp  51_solveNQueens.cpp  60_getPermutation.cpp  77_combine.cpp  78_subsets.cpp  90_subsetsWithDup.cpp  93_restoreIpAddresses.cpp
leetcode/dp/: 10_isMach.cpp  1143_longestCommonSubsequence.cpp  121_maxProfit.cpp  174_calculateMinimumHP.cpp  300_lengthOfLIS.cpp  322_coinChange.cpp  354_maxEnvelopes.cpp  509_fib.cpp  516_longestPalindromeSubseq.cpp  53_maxSubArray.cpp  583_minDistance.cpp  64_minPathSum.cpp  712_minimumDeleteSum.cpp  72_minDistance.cpp
leetcode/greedy/: 1024_videoStitching.cpp  435_eraseOverlapIntervals.cpp  452_findMinArrowShots.cpp  45_jump.cpp  55_canJump.cpp
leetcode/include/: leetcode.h
leetcode/search/: 1254_closedIsland.cpp  130_solve.cpp  200_numIslands.cpp
leetcode/system_design/: 146_LRUCache.cpp  CMakeLists.txt  readme.md
leetcode/tree/: 100_isSameTree.cpp  101_isSymmetric.cpp  102_levelOrder.cpp  1038_bstToGst.cpp  104_maxDepth.cpp  105_buildTree.cpp  106_buildTree.cpp  107_levelOrderBottom.cpp  108_sortedArrayToBST.cpp  110_isBalanced.cpp  111_minDepth.cpp  112_hasPathSum.cpp  113_pathSum.cpp  114_flatten.cpp  116_connect.cpp  117_connect.cpp  124_maxPathSum.cpp  144_preorderTraversal.cpp  145_postorderTraversal.cpp  199_rightSideView.cpp  222_countNodes.cpp  226_invertTree.cpp  230_kthSmallest.cpp  235_lowestCommonAncestor.cpp  236_lowestCommonAncester.cpp  257_binaryTreePaths.cpp  404_sumOfLeftLeaves.cpp  429_levelOrder.cpp  450_deleteNode.cpp  501_findMode.cpp  513_findBottomLeftValue.cpp  515_largestValues.cpp  530_getMinimumDifference.cpp  538_convertBST.cpp  559_maxDepth.cpp  572_isSubtree.cpp  617_mergeTrees.cpp  637_averageOfLevels.cpp  652_findDuplicateSubtrees.cpp  654_constructMaximumBinaryTree.cpp  (+6 more)
search/: 130_solve.cpp
search/islandProblem/: 1254_closedIsland.cpp  200_numIslands.cpp
test/: CMakeLists.txt  TrafficSimulation_Test.cpp
test_traffic_simulation/: CMakeLists.txt  TestTrafficSimulation.cpp
traffic_simulation/: CMakeLists.txt
traffic_simulation/src/: Demo.cpp
traffic_simulation/src/include/: Demo.h
tree/: 100_isSameTree.cpp  101_isSymmetric.cpp  102_levelOrder.cpp  1038_bstToGst.cpp  104_maxDepth.cpp  105_buildTree.cpp  106_buildTree.cpp  107_levelOrderBottom.cpp  108_sortedArrayToBST.cpp  111_isBalanced.cpp  111_minDepth.cpp  112_hasPathSum.cpp  113_pathSum.cpp  114_flatten.cpp  116_connect.cpp  117_connect.cpp  124_maxPathSum.cpp  144_preorderTraversal.cpp  145_postorderTraversal.cpp  199_rightSideView.cpp  222_countNodes.cpp  226_invertTree.cpp  230_kthSmallest.cpp  235_lowestCommonAncestor.cpp  236_lowestCommonAncester.cpp  257_binaryTreePaths.cpp  404_sumOfLeftLeaves.cpp  429_levelOrder.cpp  450_deleteNode.cpp  501_findMode.cpp  513_findBottomLeftValue.cpp  515_largestValues.cpp  530_getMinimumDifference.cpp  538_convertBST.cpp  559_maxDepth.cpp  572_isSubtree.cpp  617_mergeTrees.cpp  637_averageOfLevels.cpp  652_findDuplicateSubtrees.cpp  654_constructMaximumBinaryTree.cpp  (+7 more)
(+32 files in other folders)
