cmake_minimum_required(VERSION 3.9)
project(my_cpp_plan)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")


#add_subdirectory(leetcode/system_design)



#add_subdirectory(learn_cmake/00_basic/B-hello-headers)
#add_subdirectory(learn_cmake/00_basic/C-shared-library)
#add_subdirectory(learn_cmake/00_basic/D-shared-library)
#add_subdirectory(learn_cmake/00_basic/F-build-type)
#add_subdirectory(learn_cmake/01_hello_cmake)
#add_subdirectory(learn_cmake/02_split_library)
#add_subdirectory(learn_cmake/03_subdirectory)
